# gotoh

./: README.md  build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pipeline.yml
gotoh/: __init__.py  gotoh.c  gotoh.pyx
gotoh_counts/: __init__.py  gotoh_counts.c  gotoh_counts.pyx
gotoh_counts_rbturnbull.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_gotoh_counts.py  test_gotoh_msa.py
