[project]
name        = "gotoh"
version = "0.1.3"

[tool.poetry]
description = "Sequence Alignment with different penalties for opening gaps and extending them."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rbturnbull/gotoh"
homepage = "https://github.com/rbturnbull/gotoh"
keywords = ["multiple sequence alignment"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
python-Levenshtein = "^0.12.2"

[build-system]
requires = ["setuptools>=61.0", "numpy>=1.17", "cython>=0.18"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gotoh"]

