[tool.poetry]
name = "gotoh"
version = "0.1.6"
description = "Sequence Alignment with different penalties for opening gaps and extending them."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rbturnbull/gotoh"
homepage = "https://github.com/rbturnbull/gotoh"
keywords = ["multiple sequence alignment"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=1.23.3"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
python-Levenshtein = ">=0.12.2"
setuptools = ">=76.0.0"
Cython = ">=0.18"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0", "numpy>=1.17", "Cython>=0.18"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = 'build.py'
